#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
è¿ç§»çŠ¶æ€è¿½è¸ªå·¥å…·
è¿½è¸ªå’Œç®¡ç†JProtobufåˆ°æ ‡å‡†Protobufçš„è¿ç§»çŠ¶æ€
"""

import sqlite3
from pathlib import Path
from typing import Dict, List, Optional
from datetime import datetime

class MigrationStatusTracker:
    """è¿ç§»çŠ¶æ€è¿½è¸ªå™¨"""
    
    def __init__(self, db_path: str):
        self.db_path = db_path
    
    def _connect(self):
        """è¿æ¥æ•°æ®åº“"""
        return sqlite3.connect(self.db_path)
    
    def get_overall_status(self) -> Dict:
        """è·å–æ•´ä½“è¿ç§»çŠ¶æ€"""
        conn = self._connect()
        cursor = conn.cursor()
        
        # JProtobufæ¶ˆæ¯æ€»æ•°
        cursor.execute('SELECT COUNT(*) FROM jprotobuf_messages')
        total_jprotobuf = cursor.fetchone()[0]
        
        # æ ‡å‡†Protobufæ¶ˆæ¯æ€»æ•°
        cursor.execute('SELECT COUNT(*) FROM proto_messages')
        total_proto = cursor.fetchone()[0]
        
        # å·²æ˜ å°„çš„æ¶ˆæ¯æ•°
        cursor.execute('SELECT COUNT(DISTINCT jprotobuf_message_id) FROM message_mappings')
        mapped_count = cursor.fetchone()[0]
        
        # è¿ç§»è®°å½•æ•°
        cursor.execute('SELECT COUNT(*) FROM migration_records')
        total_records = cursor.fetchone()[0]
        
        # å·²è¿ç§»çš„æ¶ˆæ¯æ•°
        cursor.execute('''
            SELECT COUNT(DISTINCT jprotobuf_message_id) 
            FROM migration_records 
            WHERE migration_status = 'migrated'
        ''')
        migrated_count = cursor.fetchone()[0]
        
        # æ‰¹æ¬¡ç»Ÿè®¡
        cursor.execute('SELECT COUNT(*) FROM migration_batches')
        total_batches = cursor.fetchone()[0]
        
        cursor.execute('''
            SELECT COUNT(*) FROM migration_batches 
            WHERE status = 'completed'
        ''')
        completed_batches = cursor.fetchone()[0]
        
        conn.close()
        
        return {
            'total_jprotobuf': total_jprotobuf,
            'total_proto': total_proto,
            'mapped_count': mapped_count,
            'total_records': total_records,
            'migrated_count': migrated_count,
            'total_batches': total_batches,
            'completed_batches': completed_batches,
            'migration_rate': round(migrated_count / total_jprotobuf * 100, 2) if total_jprotobuf > 0 else 0,
            'mapping_rate': round(mapped_count / total_jprotobuf * 100, 2) if total_jprotobuf > 0 else 0
        }
    
    def get_message_status(self, message_name: str) -> Optional[Dict]:
        """è·å–æ¶ˆæ¯çš„è¿ç§»çŠ¶æ€"""
        conn = self._connect()
        cursor = conn.cursor()
        
        # æŸ¥æ‰¾JProtobufæ¶ˆæ¯
        cursor.execute('''
            SELECT id, message_name, message_type, file_path, module_id, cmd
            FROM jprotobuf_messages
            WHERE message_name = ?
        ''', (message_name,))
        
        jprotobuf_result = cursor.fetchone()
        if not jprotobuf_result:
            conn.close()
            return None
        
        jprotobuf_id = jprotobuf_result[0]
        
        # æŸ¥æ‰¾æ˜ å°„
        cursor.execute('''
            SELECT pm.message_name, pm.file_path, mm.mapping_type, mm.is_verified
            FROM message_mappings mm
            LEFT JOIN proto_messages pm ON mm.proto_message_id = pm.id
            WHERE mm.jprotobuf_message_id = ?
        ''', (jprotobuf_id,))
        
        mapping_result = cursor.fetchone()
        
        # æŸ¥æ‰¾è¿ç§»è®°å½•
        cursor.execute('''
            SELECT mb.batch_number, mb.batch_name, mr.migration_status, mr.created_at
            FROM migration_records mr
            LEFT JOIN migration_batches mb ON mr.batch_id = mb.id
            WHERE mr.jprotobuf_message_id = ?
            ORDER BY mr.created_at DESC
            LIMIT 1
        ''', (jprotobuf_id,))
        
        record_result = cursor.fetchone()
        
        conn.close()
        
        return {
            'jprotobuf_name': jprotobuf_result[1],
            'jprotobuf_type': jprotobuf_result[2],
            'jprotobuf_path': jprotobuf_result[3],
            'module_id': jprotobuf_result[4],
            'cmd': jprotobuf_result[5],
            'proto_name': mapping_result[0] if mapping_result else None,
            'proto_path': mapping_result[1] if mapping_result else None,
            'mapping_type': mapping_result[2] if mapping_result else None,
            'is_verified': bool(mapping_result[3]) if mapping_result else False,
            'batch_number': record_result[0] if record_result else None,
            'batch_name': record_result[1] if record_result else None,
            'migration_status': record_result[2] if record_result else None,
            'migration_date': record_result[3] if record_result else None
        }
    
    def get_batch_status(self, batch_number: int) -> Optional[Dict]:
        """è·å–æ‰¹æ¬¡çš„è¿ç§»çŠ¶æ€"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            SELECT id, batch_number, batch_name, description, status, 
                   start_time, end_time, jprotobuf_count, proto_count
            FROM migration_batches
            WHERE batch_number = ?
        ''', (batch_number,))
        
        result = cursor.fetchone()
        if not result:
            conn.close()
            return None
        
        batch_id = result[0]
        
        # è·å–æ‰¹æ¬¡ä¸­çš„æ¶ˆæ¯
        cursor.execute('''
            SELECT jm.message_name, pm.message_name, mr.migration_status
            FROM migration_records mr
            LEFT JOIN jprotobuf_messages jm ON mr.jprotobuf_message_id = jm.id
            LEFT JOIN proto_messages pm ON mr.proto_message_id = pm.id
            WHERE mr.batch_id = ?
            ORDER BY jm.message_name
        ''', (batch_id,))
        
        messages = []
        for row in cursor.fetchall():
            messages.append({
                'jprotobuf_name': row[0],
                'proto_name': row[1],
                'status': row[2]
            })
        
        conn.close()
        
        return {
            'batch_number': result[1],
            'batch_name': result[2],
            'description': result[3],
            'status': result[4],
            'start_time': result[5],
            'end_time': result[6],
            'jprotobuf_count': result[7],
            'proto_count': result[8],
            'messages': messages
        }
    
    def get_unmapped_messages(self, limit: int = 100) -> List[Dict]:
        """è·å–æœªæ˜ å°„çš„æ¶ˆæ¯"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            SELECT jm.id, jm.message_name, jm.message_type, jm.file_path
            FROM jprotobuf_messages jm
            LEFT JOIN message_mappings mm ON jm.id = mm.jprotobuf_message_id
            WHERE mm.id IS NULL
            ORDER BY jm.message_name
            LIMIT ?
        ''', (limit,))
        
        messages = []
        for row in cursor.fetchall():
            messages.append({
                'id': row[0],
                'message_name': row[1],
                'message_type': row[2],
                'file_path': row[3]
            })
        
        conn.close()
        
        return messages
    
    def get_unmigrated_messages(self, limit: int = 100) -> List[Dict]:
        """è·å–æœªè¿ç§»çš„æ¶ˆæ¯"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            SELECT DISTINCT jm.id, jm.message_name, jm.message_type, jm.file_path
            FROM jprotobuf_messages jm
            LEFT JOIN migration_records mr ON jm.id = mr.jprotobuf_message_id
            WHERE mr.id IS NULL OR mr.migration_status != 'migrated'
            ORDER BY jm.message_name
            LIMIT ?
        ''', (limit,))
        
        messages = []
        for row in cursor.fetchall():
            messages.append({
                'id': row[0],
                'message_name': row[1],
                'message_type': row[2],
                'file_path': row[3]
            })
        
        conn.close()
        
        return messages
    
    def get_migration_summary_by_type(self) -> Dict[str, Dict]:
        """æŒ‰ç±»å‹è·å–è¿ç§»æ‘˜è¦"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            SELECT message_type, COUNT(*) 
            FROM jprotobuf_messages 
            GROUP BY message_type
        ''')
        
        type_stats = {}
        for row in cursor.fetchall():
            message_type = row[0]
            total = row[1]
            
            # è·å–å·²æ˜ å°„æ•°é‡
            cursor.execute('''
                SELECT COUNT(DISTINCT jm.id)
                FROM jprotobuf_messages jm
                LEFT JOIN message_mappings mm ON jm.id = mm.jprotobuf_message_id
                WHERE jm.message_type = ? AND mm.id IS NOT NULL
            ''', (message_type,))
            
            mapped = cursor.fetchone()[0]
            
            # è·å–å·²è¿ç§»æ•°é‡
            cursor.execute('''
                SELECT COUNT(DISTINCT jm.id)
                FROM jprotobuf_messages jm
                LEFT JOIN migration_records mr ON jm.id = mr.jprotobuf_message_id
                WHERE jm.message_type = ? AND mr.migration_status = 'migrated'
            ''', (message_type,))
            
            migrated = cursor.fetchone()[0]
            
            type_stats[message_type] = {
                'total': total,
                'mapped': mapped,
                'migrated': migrated,
                'mapping_rate': round(mapped / total * 100, 2) if total > 0 else 0,
                'migration_rate': round(migrated / total * 100, 2) if total > 0 else 0
            }
        
        conn.close()
        
        return type_stats
    
    def print_overall_status(self):
        """æ‰“å°æ•´ä½“è¿ç§»çŠ¶æ€"""
        status = self.get_overall_status()
        
        print("ğŸ“Š æ•´ä½“è¿ç§»çŠ¶æ€")
        print("=" * 80)
        print()
        print(f"JProtobufæ¶ˆæ¯æ€»æ•°: {status['total_jprotobuf']}")
        print(f"æ ‡å‡†Protobufæ¶ˆæ¯æ€»æ•°: {status['total_proto']}")
        print(f"å·²æ˜ å°„æ¶ˆæ¯æ•°: {status['mapped_count']} ({status['mapping_rate']}%)")
        print(f"å·²è¿ç§»æ¶ˆæ¯æ•°: {status['migrated_count']} ({status['migration_rate']}%)")
        print(f"è¿ç§»è®°å½•æ€»æ•°: {status['total_records']}")
        print(f"æ‰¹æ¬¡æ€»æ•°: {status['total_batches']}")
        print(f"å·²å®Œæˆæ‰¹æ¬¡: {status['completed_batches']}")
        print()
    
    def print_message_status(self, message_name: str):
        """æ‰“å°æ¶ˆæ¯çš„è¿ç§»çŠ¶æ€"""
        status = self.get_message_status(message_name)
        
        if not status:
            print(f"âŒ æœªæ‰¾åˆ°æ¶ˆæ¯: {message_name}")
            return
        
        print(f"ğŸ“Š æ¶ˆæ¯ {message_name} çš„è¿ç§»çŠ¶æ€")
        print("=" * 80)
        print()
        print(f"JProtobuf:")
        print(f"  åç§°: {status['jprotobuf_name']}")
        print(f"  ç±»å‹: {status['jprotobuf_type']}")
        print(f"  æ–‡ä»¶: {status['jprotobuf_path']}")
        if status['module_id']:
            print(f"  ModuleID: {status['module_id']}")
        if status['cmd']:
            print(f"  CMD: {status['cmd']}")
        print()
        
        if status['proto_name']:
            print(f"æ ‡å‡†Protobuf:")
            print(f"  åç§°: {status['proto_name']}")
            print(f"  æ–‡ä»¶: {status['proto_path']}")
            print(f"  æ˜ å°„ç±»å‹: {status['mapping_type']}")
            print(f"  å·²éªŒè¯: {'âœ…' if status['is_verified'] else 'âŒ'}")
            print()
        
        if status['batch_number']:
            print(f"è¿ç§»ä¿¡æ¯:")
            print(f"  æ‰¹æ¬¡: {status['batch_number']} - {status['batch_name']}")
            print(f"  çŠ¶æ€: {status['migration_status']}")
            print(f"  æ—¥æœŸ: {status['migration_date']}")
            print()
        else:
            print("è¿ç§»ä¿¡æ¯: æœªè¿ç§»")
            print()

def main():
    """ä¸»å‡½æ•°"""
    import argparse
    
    parser = argparse.ArgumentParser(description='è¿ç§»çŠ¶æ€è¿½è¸ªå·¥å…·')
    parser.add_argument('--overall', action='store_true', help='æŸ¥çœ‹æ•´ä½“è¿ç§»çŠ¶æ€')
    parser.add_argument('--message', type=str, help='æŸ¥çœ‹æ¶ˆæ¯çš„è¿ç§»çŠ¶æ€')
    parser.add_argument('--batch', type=int, help='æŸ¥çœ‹æ‰¹æ¬¡çš„è¿ç§»çŠ¶æ€')
    parser.add_argument('--unmapped', action='store_true', help='æŸ¥çœ‹æœªæ˜ å°„çš„æ¶ˆæ¯')
    parser.add_argument('--unmigrated', action='store_true', help='æŸ¥çœ‹æœªè¿ç§»çš„æ¶ˆæ¯')
    parser.add_argument('--by-type', action='store_true', help='æŒ‰ç±»å‹æŸ¥çœ‹è¿ç§»æ‘˜è¦')
    
    args = parser.parse_args()
    
    db_path = '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/data/migration_system.db'
    tracker = MigrationStatusTracker(db_path)
    
    if args.overall:
        tracker.print_overall_status()
    elif args.message:
        tracker.print_message_status(args.message)
    elif args.batch:
        status = tracker.get_batch_status(args.batch)
        if status:
            print(f"ğŸ“Š æ‰¹æ¬¡ {args.batch} çš„è¿ç§»çŠ¶æ€")
            print("=" * 80)
            print()
            print(f"æ‰¹æ¬¡åç§°: {status['batch_name']}")
            print(f"çŠ¶æ€: {status['status']}")
            print(f"å¼€å§‹æ—¶é—´: {status['start_time']}")
            print(f"ç»“æŸæ—¶é—´: {status['end_time']}")
            print(f"JProtobufæ¶ˆæ¯æ•°: {status['jprotobuf_count']}")
            print(f"æ ‡å‡†Protobufæ¶ˆæ¯æ•°: {status['proto_count']}")
            print()
            print("æ¶ˆæ¯åˆ—è¡¨:")
            for msg in status['messages']:
                print(f"  {msg['jprotobuf_name']} -> {msg['proto_name']} ({msg['status']})")
            print()
        else:
            print(f"âŒ æœªæ‰¾åˆ°æ‰¹æ¬¡: {args.batch}")
    elif args.unmapped:
        messages = tracker.get_unmapped_messages()
        print(f"ğŸ“Š æœªæ˜ å°„çš„æ¶ˆæ¯ ({len(messages)} ä¸ª)")
        print("=" * 80)
        for msg in messages:
            print(f"  {msg['message_name']} ({msg['message_type']})")
        print()
    elif args.unmigrated:
        messages = tracker.get_unmigrated_messages()
        print(f"ğŸ“Š æœªè¿ç§»çš„æ¶ˆæ¯ ({len(messages)} ä¸ª)")
        print("=" * 80)
        for msg in messages:
            print(f"  {msg['message_name']} ({msg['message_type']})")
        print()
    elif args.by_type:
        type_stats = tracker.get_migration_summary_by_type()
        print("ğŸ“Š æŒ‰ç±»å‹çš„è¿ç§»æ‘˜è¦")
        print("=" * 80)
        print()
        for msg_type, stats in type_stats.items():
            print(f"{msg_type}:")
            print(f"  æ€»æ•°: {stats['total']}")
            print(f"  å·²æ˜ å°„: {stats['mapped']} ({stats['mapping_rate']}%)")
            print(f"  å·²è¿ç§»: {stats['migrated']} ({stats['migration_rate']}%)")
            print()
    else:
        parser.print_help()

if __name__ == '__main__':
    main()
